--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ html, body {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  transition: 300ms;
 }
 
 
@@ -82,6 +83,30 @@ html, body {
   cursor: pointer;
   opacity: 0.3;
 }
+.status:active {
+  opacity: 0.8;
+  outline: 1px solid rgb(255, 255, 255);
+  /* transition: 50ms; */
+}
+
+.divIconBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0.5rem;
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  cursor: pointer;
+  opacity: 0.5;
+  /* margin-left: auto; */
+}
+.divIconBtn:active {
+  opacity: 0.8;
+  background-color: rgba(255, 255, 255, 0.05);
+  /* transition: 50ms; */
+}
 
 
 
@@ -95,13 +120,28 @@ html, body {
 .status.WFH {
   color: #ffe788; 
 }
-.status.L {
+.status.L,
+.status.A {
   color: #ff8ca5; 
 }
 .status.OS {
   color: #8cb0ff; 
 }
 
+
+.status.P:active {
+  outline-color: #9aff9a;
+}
+.status.WFH:active {
+  outline-color: #ffe788;
+}
+.status.L:active,
+.status.A:active {
+  outline-color: #ff8ca5;
+}
+.status.OS:active {
+  outline-color: #8cb0ff;
+}
 
 
 .iconWrapper {
@@ -113,7 +153,8 @@ html, body {
 .iconWrapper.WFH {
   color: #ac8826;
 }
-.iconWrapper.L {
+.iconWrapper.L,
+.iconWrapper.A {
   color: #aa2441;
 }
 .iconWrapper.OS {
@@ -149,7 +190,12 @@ input {
 
 input.inputReason {
   text-align: left;
-  min-width: 12rem;
+  flex-grow: 1;
+  /* min-width: 12rem; */
+}
+.OS ~ .changeStatusButtonContainer > input.inputReason {
+  min-width: 20rem;
+  margin-bottom: 0.5rem;
 }
 
 .hide {
@@ -173,10 +219,10 @@ input.inputReason {
 }
 .changeStatusButtonContainer {
   justify-content: flex-start;
+  width: 100%;
 }
 .changeStatusButtonContainer:has(.active) {
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 @media only screen and (max-width: 600px) {
@@ -191,11 +237,4 @@ input.inputReason {
     background-color: rgba(255, 255, 255, 0.02);
   }
 
-  .changeStatusButtonContainer {
-    justify-content: flex-start;
-  }
-  .changeStatusButtonContainer:has(.active) {
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-  }
 }
