--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,13 @@ button.destructive:hover,
 .destructive:hover {
   border-color: rgb(212, 58, 58);
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: rgba(255, 255, 255, 0.87);
+  }
+  a:hover {
+    color: #646cff;
+  }
+  
+}
