--- a/src/TimePicker.css
+++ b/src/TimePicker.css
@@ -127,7 +127,7 @@
 .cancelBtn {
     flex-grow: 1;
     margin-top: 1.5rem;
-    color: rgb(168, 168, 168);
+    color: rgba(255, 255, 255, 0.5);
 }
 
 
