--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: rgba(66, 132, 255, 0.897);;
 }
 button:hover {
   border-color: #646cff;
@@ -61,14 +62,4 @@ button.destructive,
 button.destructive:hover,
 .destructive:hover {
   border-color: rgb(212, 58, 58);
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: rgba(255, 255, 255, 0.87);
-  }
-  a:hover {
-    color: #646cff;
-  }
-  
 }
