--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ p {
 }
 
 .staffListItem {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -64,16 +65,6 @@ p {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
   transition: 300ms;
-}
-
-
-.changeStatusButtonContainer {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  width: 13.5rem;
-  justify-content: flex-end;
-  /* background-color: rgba(255, 0, 0, 0.137); */
 }
 
 
@@ -116,24 +107,42 @@ p {
 }
 
 
+.changeStatusButtonContainer {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  width: 13.5rem;
+  justify-content: flex-end;
+  /* background-color: rgba(255, 0, 0, 0.137); */
+}
 
 .status.active {
   opacity: 0.8;
 }
-
 .status.P {
+  --accent-color: #9aff9a;
   color: #9aff9a; 
 }
 .status.WFH {
+  --accent-color: #ffe788;
   color: #ffe788; 
 }
 .status.L,
 .status.A {
+  --accent-color: #ff8ca5;
   color: #ff8ca5; 
 }
 .status.OS {
+  --accent-color: #8cb0ff;
   color: #8cb0ff; 
 }
+
+/* .status.active {
+  background-color: var(--accent-color);
+  color: #1a1a1a;
+  opacity: 0.8;
+  font-weight: 600;
+} */
 
 
 .status.P:active {
@@ -184,21 +193,32 @@ p {
   align-items: center;
   justify-content: flex-start;
 }
+/* .nameStatus.active {
+  font-weight: bold;
+} */
 
 input {
   padding: 0.5rem;
   border-radius: 0.5rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  background-color: rgba(255, 255, 255, 0.01);
+  border: 1px solid rgba(255, 255, 255, 0.0);
+  background-color: rgba(0, 0, 0, 0.2);
   color: #fff;
   width: 4rem;
   text-align: center;
+}
+input::placeholder {
+  color: #fff;
+  opacity: 0.3;
+  font-style: italic;
+  font-weight: 200;
+  padding-left: 0.2rem;
 }
 
 input.inputReason {
   text-align: left;
   flex-grow: 1;
-  /* min-width: 12rem; */
+  min-width: 20rem;
+  padding: 0.8rem 0.8rem;
 }
 .OS ~ .changeStatusButtonContainer > input.inputReason {
   min-width: 20rem;
@@ -234,7 +254,9 @@ select {
   border-radius: 0.5rem;
   border: 0px solid transparent;
   background-color: rgba(46, 46, 46, 0.01);
-  color: rgba(66, 132, 255, 0.897);
+  /* color: rgba(66, 132, 255, 0.897); */
+  color: rgba(255, 255, 255, 0.7);
+  /* color: #ff8ca5; */
   width: 10rem;
   height: 2.1rem;
 }
@@ -254,11 +276,18 @@ option {
   color: rgba(204, 204, 204, 0.897);
   padding: 1rem;
 }
-option:hover {
+/* option:hover {
   background-color: #1a1a1a;
   color: #646cff;
-}
+} */
 
+.unsetIcon {
+  position: absolute;
+  right: 0.7rem;
+  top: 0.7rem;
+  color: #941f50;
+  opacity: 0.5
+}
 
 
 
