--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 }
 
 html, body {
-  background: #0c0c0c;
+  /* background: #0c0c0c; */
+  background: #ffffff;
 }
 
 #root {
@@ -27,13 +28,16 @@ p {
 .mainTitle {
   font-size: 1.8rem;
   font-weight: 700;
-  color: hsla(39, 100%, 63%, 0.918);
-  text-align: center;
+  /* color: hsla(39, 100%, 63%, 0.918); */
+  color: rgba(66, 132, 255, 0.897);
+  text-align: left;
+  margin-inline: 1rem;
 }
 .title {
   font-size: 1.5rem;
   font-weight: 500;
   color: #fff;
+  color: #282828;
   margin-bottom: 0rem;
   margin-top: 3rem;
   text-align: center;
@@ -52,10 +56,12 @@ p {
 .details {
   font-size: 0.8rem;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.3);
+  /* color: rgba(255, 255, 255, 0.3); */
+  color: rgba(0, 0, 0, 0.5);
   /* margin-bottom: 0.2rem; */
   margin-top: -0.5rem;
-  text-align: center;
+  text-align: left;
+  padding-inline: 1rem;
 }
 
 .staffListItem {
@@ -63,8 +69,12 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6rem 0.5rem 0.6rem 1rem;
-  background-color: rgba(255, 255, 255, 0.01);
+  padding: 0.8rem 0.5rem 0.8rem 1.4rem;
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  background-color: #ffffff;
+  box-shadow: rgb(from #0F172A r g b / 0.05) 0px 0.1rem 0.6rem 0rem;
+  border: rgb(from #CAD5E2 r g b / 0.2) 1px solid;
+
   width: 32rem;
   border-radius: 1rem;
   transition: 50ms;
@@ -72,6 +82,8 @@ p {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
   transition: 300ms;
+  margin-bottom: -0.2rem;
+  padding-block: 1rem;
 }
 
 
@@ -81,18 +93,15 @@ p {
   justify-content: center;
   align-items: center;
   padding: 0.5rem 1rem;
-  border-radius: 1rem;
+  border-radius: 2rem;
   font-size: 0.8rem;
   font-weight: 500;
-  background-color: rgba(255, 255, 255, 0.05);
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  background-color: #F2F6F9;
   cursor: pointer;
-  opacity: 0.3;
+  opacity: 1;
 }
-.status:active {
-  opacity: 0.8;
-  outline: 1px solid rgb(255, 255, 255);
-  /* transition: 50ms; */
-}
+
 
 .divIconBtn {
   display: flex;
@@ -123,39 +132,39 @@ p {
   /* background-color: rgba(255, 0, 0, 0.137); */
 }
 
-.status.active {
-  opacity: 0.8;
-}
 .status.P {
-  --accent-color: #9aff9a;
-  color: #9aff9a; 
+  --accent-color: #34C759;
+  color: #34C759; 
 }
 .status.WFH {
-  --accent-color: #ffe788;
-  color: #ffe788; 
+  --accent-color: #FF8D28;
+  color: #FF8D28; 
 }
 .status.L,
 .status.A {
-  --accent-color: #ff8ca5;
-  color: #ff8ca5; 
+  --accent-color: #FF383C;
+  color: #FF383C; 
 }
 .status.OS {
-  --accent-color: #8cb0ff;
-  color: #8cb0ff; 
+  --accent-color: #007AFF;
+  color: #007AFF; 
 }
 
-/* .status.active {
+.status.active {
   background-color: var(--accent-color);
-  color: #1a1a1a;
-  opacity: 0.8;
+  color: #ffffff;
+  opacity: 1;
   font-weight: 600;
-} */
-
-
-.status.P:active {
-  outline-color: #9aff9a;
 }
-.status.WFH:active {
+
+
+.status:active {
+  outline-color: var(--accent-color);
+  background-color: var(--accent-color);
+  color: #ffffff;
+  /* transition: 50ms; */
+}
+/* .status.WFH:active {
   outline-color: #ffe788;
 }
 .status.L:active,
@@ -164,7 +173,7 @@ p {
 }
 .status.OS:active {
   outline-color: #8cb0ff;
-}
+} */
 
 
 .iconWrapper {
@@ -185,42 +194,46 @@ p {
 }
 
 
-.staffListItem:hover {
+/* .staffListItem:hover {
   background-color: rgba(255, 255, 255, 0.05);
-}
+} */
 
 /* .staffListItemContainer {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.1rem;
 } */
 
 .nameStatus {
+  color: #484848;
   display: flex;
   gap: 0.4rem;
   align-items: center;
   justify-content: flex-start;
+  opacity: 0.8;
 }
-/* .nameStatus.active {
-  font-weight: bold;
-} */
+.nameStatus.active {
+  font-weight: 500;
+  opacity: 1;
+}
 
 input {
   padding: 0.5rem;
-  border-radius: 0.5rem;
+  border-radius: 2cap;
   border: 1px solid rgba(255, 255, 255, 0.0);
   /* background-color: rgba(0, 0, 0, 0.2); */
-  background-color: rgba(255, 255, 255, 0.02);
+  background-color: #F2F6F9;
 
-  color: rgba(255, 255, 255, 0.7);
+  color: #484848;
   width: 4rem;
   text-align: center;
   height: 2.1rem;
 }
 input::placeholder {
-  color: rgb(255, 255, 255);
-  opacity: 0.2;
-  font-style: italic;
-  font-weight: 200;
+  color: #282828;
+  opacity: 0.5;
+  /* font-style: italic; */
+  font-weight: 400;
+  /* font-size: 0.6rem; */
   /* padding-left: 0.2rem; */
 }
 
@@ -270,9 +283,9 @@ select {
   position: relative;
   border-radius: 0.5rem;
   border: 0px solid transparent;
-  background-color: rgba(46, 46, 46, 0.01);
+  background-color: #F2F6F9;
   /* color: rgba(66, 132, 255, 0.897); */
-  color: rgba(255, 255, 255, 0.7);
+  color: #282828;
   /* color: #ff8ca5; */
   width: 10rem;
   height: 2.1rem;
@@ -285,12 +298,12 @@ select:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: #F2F6F9;
   padding-inline: 0.8rem;
 }
 option {
-  background-color: #1a1a1a;
-  color: rgba(204, 204, 204, 0.897);
+  background-color: #F2F6F9;
+  color: #282828;
   padding: 1rem;
 }
 /* option:hover {
@@ -309,19 +322,27 @@ option {
 
 p.title {
   position: relative;
+  text-align: left;
+  font-weight: 200;
+  padding-inline: 1rem;
+  /* opacity: 0.8; */
+  line-height: 1.9rem;
+  margin-top: 4rem;
+  
 }
 .titleBtn {
   margin-top: 0.15rem;
   position: absolute;
   right: 0;
   margin-left: auto;
-  padding: 0.4rem 0.8rem;
-  background-color: rgba(66, 132, 255, 0.897);
+  padding: 0.2rem 1rem;
+  background-color: #007AFF;
   font-size: 0.8rem;
   font-weight: 600;
-  color: #1a1a1a;
+  color: #ffffff;
   border-radius: 10rem;
   cursor: pointer;
+  transform: translateY(-0.36rem);
 }
 .titleBtn:active {
   opacity: 0.6;
@@ -360,9 +381,48 @@ p.title {
   left: 50%;
   aspect-ratio: 1 / 1;
   width: 67%;
-  background-color: #0c0c0c;
+  background-color: #ffffff;
   border-radius: 50%;
   transform: translate(-50%, -50%);
+}
+
+.staffListTextArea {
+  width: 100%;
+  height: 24rem;
+  background-color: #F2F6F9;
+  border-radius: 0.8rem;
+  padding: 1rem;
+  resize: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 1rem 1.2rem;
+  font-size: 0.9rem;
+  background-color: #F2F6F9;
+  color: #282828;
+}
+.staffListTextArea:focus {
+  outline: none;
+}
+.setupActions {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+.setupActions > button:first-child {
+  margin-bottom: 0.5rem;
+  
+}
+.setupButtons {
+  display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    gap: 0.5rem;
+    margin-top: 1rem;
+}
+.setupButtons > button {
+  flex-grow: 1;
+  color: rgb(from #484848 r g b / 0.9);
 }
 
 
@@ -374,9 +434,9 @@ p.title {
     width: calc(100dvw - 2rem);
   }
 
-  .staffListItem:hover {
+  /* .staffListItem:hover {
     background-color: rgba(255, 255, 255, 0.02);
-  }
+  } */
 
 }
 
