--- a/src/ExecutiveList.css
+++ b/src/ExecutiveList.css
@@ -12,8 +12,8 @@
   }
   .execAppointment {
     font-size: 0.8rem;
-    font-weight: 600;
-    color: rgba(255, 210, 112, 0.5);
+    font-weight: 500;
+    color: rgb(from #FF9500 r g b / 0.8);
   }
   
   .execListHeader {
@@ -28,11 +28,11 @@
 
   .execListHeader > .iconBtn {
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.8;
   }
 
   .execListHeader > .iconBtn:hover {
-    opacity: 0.8;
+    opacity: 1;
   }
 
   .executives {
@@ -45,8 +45,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.6rem 0.5rem 0.6rem 1rem;
-    background-color: rgba(255, 255, 255, 0.01);
+    padding: 1rem 0.5rem 1rem 1.4rem;
+    background-color: #ffffff;
+    box-shadow: rgb(from #0F172A r g b / 0.05) 0px 0.1rem 0.6rem 0rem;
+    border: rgb(from #CAD5E2 r g b / 0.2) 1px solid;
     border-radius: 1rem;
     transition: 50ms;
     -webkit-user-select: none; /* Safari */
