--- a/src/TimePicker.css
+++ b/src/TimePicker.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,13 +12,14 @@
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    color: #484848;
 }
 .timePickerOverlay.inactive {
     display: none;
 }
 .modalCardTime {
     width: min(30rem, calc(100vw - 2rem));
-    background-color: rgb(15, 15, 15);
+    background-color: #ffffff;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -96,7 +97,7 @@
     width: 100%;
     height: 5rem;
     /* background-color: rgba(255, 255, 255, 0.678); */
-    background: linear-gradient(180deg, rgba(15, 15, 15, 1) 32%, rgba(15, 15, 15, 0) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 32%, rgba(255, 255, 255, 0) 100%);
     z-index: 100;
     pointer-events: none;
 }
@@ -109,7 +110,7 @@
     width: 100%;
     height: 6rem;
     /* background-color: rgba(255, 255, 255, 0.678); */
-    background: linear-gradient(180deg, rgba(15, 15, 15, 0) 32%, rgba(15, 15, 15, 1) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 100%);
     z-index: 100;
     pointer-events: none;
 }
@@ -127,15 +128,16 @@
 .cancelBtn {
     flex-grow: 1;
     margin-top: 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: #484848;
 }
 
 
 .timeJump {
     position: absolute;
-    color: rgba(255, 255, 255, 0.15);
+    color: #484848;
+    opacity: 0.2;
     z-index: 100;
-    right: -1.2rem;
+    right: -1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
