--- a/src/components/styles/Modal.css
+++ b/src/components/styles/Modal.css
@@ -24,7 +24,7 @@
 
 .modalCard {
   width: min(30rem, calc(100dvw - 2rem));
-  background-color: rgb(15, 15, 15);
+  background-color: #ffffff;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -51,6 +51,7 @@
     margin-block-start: 0.5rem;
     margin-inline-start: 1.5rem;
     text-align: left;
+    margin-left: 0;
 }
 
 /* ------------------ MODAL BODY ------------------- */
@@ -59,7 +60,7 @@
     flex-direction: column;
     width: 100%;
     height: 24rem;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #F2F6F9;
     border-radius: 0.8rem;
     overflow-y: scroll;
     padding: 1rem 1.2rem;
@@ -78,11 +79,11 @@
     color: rgba(66, 132, 255, 0.897);
 }
 .modalCard .destructive {
-    color: rgb(212, 58, 58);
+    color: #FF3B30;
 }
 .modalCard .secondary,
 .modalCard button {
-    color: rgba(255, 255, 255, 0.8);
+    color: #484848DF;
 }
 
 .modalCard > .actionButtons {
