--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,11 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #121212;
+  color-scheme: light;
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: #282828;
+  /* background-color: #121212; */
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,13 +39,15 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 1rem;
   border: 1px solid transparent;
   padding: 0.8em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #F2F6F9;
+  /* box-shadow: rgb(from #0F172A r g b / 0.05) 0px 0.1rem 0.6rem 0rem;
+  border: rgb(from #CAD5E2 r g b / 0.2) 1px solid; */
   cursor: pointer;
   transition: border-color 0.25s;
   color: rgba(66, 132, 255, 0.897);
@@ -53,13 +57,14 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /* outline: 4px auto -webkit-focus-ring-color; */
+  outline: none;
 }
 button.destructive,
 .destructive {
-  color: rgb(212, 58, 58);
+  color: #FF3B30;
 }
 button.destructive:hover,
 .destructive:hover {
-  border-color: rgb(212, 58, 58);
+  border-color: #FF3B30;
 }
