--- a/src/TimePicker.css
+++ b/src/TimePicker.css
@@ -19,7 +19,7 @@
 }
 .modalCardTime {
     width: min(30rem, calc(100vw - 2rem));
-    background-color: #ffffff;
+    background-color: var(--background);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -97,7 +97,7 @@
     width: 100%;
     height: 5rem;
     /* background-color: rgba(255, 255, 255, 0.678); */
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 32%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(180deg, rgb(from var(--background) r g b / 1) 32%, rgb(from var(--background) r g b / 0) 100%);
     z-index: 100;
     pointer-events: none;
 }
@@ -110,7 +110,7 @@
     width: 100%;
     height: 6rem;
     /* background-color: rgba(255, 255, 255, 0.678); */
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 100%);
+    background: linear-gradient(180deg, rgb(from var(--background) r g b / 0) 32%, rgb(from var(--background) r g b / 1) 100%);
     z-index: 100;
     pointer-events: none;
 }
@@ -128,13 +128,13 @@
 .cancelBtn {
     flex-grow: 1;
     margin-top: 1.5rem;
-    color: #484848;
+    color: var(--text-secondary);
 }
 
 
 .timeJump {
     position: absolute;
-    color: #484848;
+    color: var(--text-secondary);
     opacity: 0.2;
     z-index: 100;
     right: -1rem;
