--- a/src/ExecutiveList.css
+++ b/src/ExecutiveList.css
@@ -9,6 +9,8 @@
     gap: 0.4rem;
     align-items: center;
     justify-content: flex-start;
+    color: var(--text-primary);
+    opacity: 0.8;
   }
   .execAppointment {
     font-size: 0.8rem;
@@ -46,7 +48,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0.5rem 1rem 1.4rem;
-    background-color: var(--background);
+    background-color: var(--item-color);
     box-shadow: rgb(from #0F172A r g b / 0.05) 0px 0.1rem 0.6rem 0rem;
     border: var(--border-color) 1px solid;
     border-radius: 1rem;
@@ -67,12 +69,13 @@
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    width: 100%;
+    width: 100%;;
     /* margin-left: 1rem; */
     /* gap: 0.5rem; */
   }
   .timeSelectContainer > input.inputHH {
     margin-left: auto;
+    background-color: var(--background-secondary);
   }
   .removeExec {
     transform: translate(-0.2rem, -0.2rem);
