--- a/src/FlexibleList.css
+++ b/src/FlexibleList.css
@@ -22,6 +22,8 @@
 
 .guestNameDetails {
   margin-left: 0rem;
+  color: var(--text-primary);
+  opacity: 0.8;
 }
 .guestAppointment {
   font-size: 0.8rem;
